--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
       table, th, td {
         border: 1px solid;
       }
+      th, td {
+        padding: 5px;
+      }
       table {
         border-collapse: collapse;
       }
@@ -20,34 +23,41 @@
         <table>
             <thead>
                 <tr>
-                    <th>Id</th>
-                    <th>Alias</th>
-                    <th>Name</th>
-                    <th>Join Rule</th>
                     <th>Select</th>
+                    <th>Name</th>
+                    <th>Alias</th>
+                    <th>Join Rule</th>
+                    <th>ID</th>
                 </tr>
             </thead>
             <tbody>
                 {% for room in rooms %}
                 <tr>
-                    <td>{{ room.room_id }}</td>
-                    <td>{{ room.canonical_alias }}</td>
-                    <td>{{ room.name }}</td>
-                    <td>{{ room.join_rule }}</td>
                     <td><input type="radio" name="room_id" value="{{ room.room_id }}"></td>
+                    <td>{{ room.name }}</td>
+                    <td>{{ room.canonical_alias }}</td>
+                    <td>{{ room.join_rule }}</td>
+                    <td>{{ room.room_id }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-        <div>
-            <label for="user">User ID:</label>
-            <input type="text" id="user" name="user_id" required>
-        </div>
-        <div class="cf-turnstile" data-sitekey="{{ turnstile_site_key }}"></div>
-        <div>
-          <button type="submit">Invite</button>
+        <div style="display: flex; padding: 5px;">
+          <div style="display: fiex; flex-direction: column;">
+            <div style="padding: 5px;">
+                <label for="user">User ID:</label>
+                <input type="text" id="user" name="user_id" required>
+            </div>
+            <div style="padding: 5px;">
+              <button type="submit" style="width: 100%;">Invite</button>
+            </div>
+          </div>
+          <div class="cf-turnstile" data-sitekey="{{ turnstile_site_key }}"></div>
         </div>
       </form>
     </div>
+    <footer>
+      Source Code: <a href="https://github.com/NickCao/bouncer">https://github.com/NickCao/bouncer</a>
+    </footer>
   </body>
 </html>
