--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
                 <input type="text" id="user" name="user_id" required>
             </div>
             <div style="padding: 5px;">
-              <button type="submit" style="width: 100%;">Invite</button>
+              <button type="submit" style="width: 100%;">Login with GitHub to Invite</button>
             </div>
           </div>
           <div class="cf-turnstile" data-sitekey="{{ turnstile_site_key }}"></div>
