Add placeholder/example in user id input

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
           <div style="display: fiex; flex-direction: column;">
             <div style="padding: 5px;">
                 <label for="user">User ID:</label>
-                <input type="text" id="user" name="user_id" required>
+                <input type="text" id="user" name="user_id" placeholder="@user:example.com" required>
             </div>
             <div style="padding: 5px;">
               <button type="submit" style="width: 100%;">Login with GitHub to Invite</button>
